force-app/main/default/objects/Unit_System_Record__mdt/Unit_System_Record__mdt.object-meta.xml
<CustomObject>
    <label>Unit System Record</label>
    <pluralLabel>Unit System Records</pluralLabel>
</CustomObject>