force-app/main/default/objects/Unit_System_Record__mdt/fields/Measured_Type__c.field-meta.xml
<CustomField>
    <fullName>Measured_Type__c</fullName>
    <label>Measured Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Length</fullName>
                <default>true</default>
                <label>Length</label>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Height</fullName>
            </value>
            <value>
                <fullName>Weight</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>