force-app/main/default/objects/Unit_System_Record__mdt/fields/measured_unit__c.field-meta.xml
<CustomField>
    <fullName>measured_unit__c</fullName>
    <label>measured unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>