force-app/main/default/objects/Unit_System_Record__mdt/fields/Unit_System__c.field-meta.xml
<CustomField>
    <fullName>Unit_System__c</fullName>
    <label>Unit System</label>
    <referenceTo>Unit_System__mdt</referenceTo>
    <relationshipLabel>Unit System Records</relationshipLabel>
    <relationshipName>Unit_System_Records</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>